[gd_scene load_steps=7 format=3 uid="uid://df0xn0ad1cgpb"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_rgm03"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6512n"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7oiom"]
height = 1.49

[sub_resource type="BoxMesh" id="BoxMesh_ctomc"]
size = Vector3(0.1, 0.1, 0.25)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sdwor"]
height = 0.21
radius = 0.4

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qtohj"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_rgm03")

[node name="Player Collider" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_6512n")

[node name="Crouching Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.254921, 0)
shape = SubResource("CapsuleShape3D_7oiom")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Weapon" type="MeshInstance3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.1, -0.4)
mesh = SubResource("BoxMesh_ctomc")
skeleton = NodePath("../..")

[node name="Tip" type="Node3D" parent="Head/Weapon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.130632)

[node name="WeaponRayCast3D" type="RayCast3D" parent="Head/Weapon/Tip"]
target_position = Vector3(0, 0, -50)

[node name="OnFloorCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("CylinderShape3D_sdwor")
target_position = Vector3(0, -0.4, 0)

[node name="HeadCrouchCast" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_sdwor")
target_position = Vector3(0, 0.4, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qtohj")

[node name="ShootCD" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShootCD" to="." method="_on_shoot_cd_timeout"]
